--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,11 +40,11 @@
 <div class="container">
     {% for message in get_flashed_messages() %}
     <div class="alert alert-warning">
-        <button type="button" class="close" data-dismiss="alert">%times;</button>
+        <button type="button" class="close" data-dismiss="alert"></button>
         {{ message }}
     </div>
     {% endfor %}
-    
+
     {% block page_content %}{% endblock %}
 </div>
 {% endblock %}
